--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,13 @@ node_modules/
 # Ignore all .env files
 .env
 
-# Ignore all excel files
+# Ignore all Excel files
+*.xls
 *.xlsx
+*.xlsm
+*.xlsb
+*.xltx
+*.xltm
 
 # Ignore all text files
 *.txt
