--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,4 @@
-# Ignore all .log files
-*.log
 
-# Ignore node_modules directory
-node_modules/
-
-# Ignore all .env files
-.env
-
-# Ignore all Excel files
-*.xls
 *.xlsx
-*.xlsm
-*.xlsb
-*.xltx
-*.xltm
-
-# Ignore all text files
 *.txt
-
-# Ignore all files in a specific directory
-path/to/directory/*
-
-# Ignore all files ending with .bak
-*.bak
-
-multipliers.xlsx
+tempCodeRunnerFile.py
